updated project to typescript with new features and improvements

--- a/index.html
+++ b/index.html
@@ -3,15 +3,78 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+
+    <!-- Primary Meta Tags -->
+    <title>AI Chat Hub - Universal Multi-Provider Assistant</title>
+    <meta
+      name="title"
+      content="AI Chat Hub - Universal Multi-Provider Assistant | Arnob Mahmud"
+    />
+    <meta
+      name="description"
+      content="Advanced AI chat bot supporting multiple AI providers including Google Gemini, Groq, OpenRouter, Hugging Face, and OpenAI. Engage in intelligent conversations with an intuitive interface and chat history management."
+    />
+    <meta
+      name="keywords"
+      content="AI chat bot, artificial intelligence, chatbot, AI assistant, Gemini AI, Groq, OpenRouter, Hugging Face, OpenAI, GPT, conversation AI, TypeScript, React, Arnob Mahmud"
+    />
+    <meta name="author" content="Arnob Mahmud" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://arnob-mahmud.vercel.app/" />
+    <meta
+      property="og:title"
+      content="AI Chat Hub - Universal Multi-Provider Assistant"
+    />
+    <meta
+      property="og:description"
+      content="Advanced AI chat bot supporting multiple AI providers including Google Gemini, Groq, OpenRouter, Hugging Face, and OpenAI. Engage in intelligent conversations with an intuitive interface and chat history management."
+    />
+    <meta
+      property="og:image"
+      content="https://arnob-mahmud.vercel.app/chatbot.svg"
+    />
+    <meta property="og:site_name" content="AI Chat Hub" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://arnob-mahmud.vercel.app/" />
+    <meta
+      property="twitter:title"
+      content="AI Chat Hub - Universal Multi-Provider Assistant"
+    />
+    <meta
+      property="twitter:description"
+      content="Advanced AI chat bot supporting multiple AI providers including Google Gemini, Groq, OpenRouter, Hugging Face, and OpenAI. Engage in intelligent conversations with an intuitive interface and chat history management."
+    />
+    <meta
+      property="twitter:image"
+      content="https://arnob-mahmud.vercel.app/chatbot.svg"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/chatbot.svg" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#8e25bf" />
+
+    <!-- External Stylesheets -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
-    <title>AI Chat Bot</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
